style: Fix stream filters styles (#7765)
Better padding
Fix stream filters button for other languages with longer text than english
Fixes ellipsis for overflowing text which wasn't previously working

--- a/src/sentry/static/sentry/less/stream.less
+++ b/src/sentry/static/sentry/less/stream.less
@@ -1051,25 +1051,16 @@
 }
 
 .stream-sort {
-  width: 165px;
-  position: absolute;
-  display: block;
-  left: 0;
-  top: 0;
   margin-right: 5px;
 
   .dropdown-toggle {
     .btn-default;
-
+    width: 168px;
     font-size: 14px;
     border: 1px solid lighten(@gray-lighter, 7);
     padding: 6px 12px;
     border-radius: 3px;
 
-    text-overflow: ellipsis;
-    white-space: nowrap;
-    overflow: hidden;
-    max-width: 100%;
     display: block;
     text-align: center;
 
@@ -1078,7 +1069,15 @@
       margin-left: 5px;
       margin-right: -2px;
       min-width: 16px;
+      top: 4px;
     }
+  }
+
+  .dropdown-actor-title {
+    display: block;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
   }
 
   .dropdown-menu {
@@ -1113,9 +1112,7 @@
   .clearfix();
 
   .search-container {
-    padding-right: 55px;
-    padding-left: 170px;
-    position: relative;
+    display: flex;
   }
 
   .search {
@@ -1123,9 +1120,6 @@
   }
 
   .toggle-stream-sidebar {
-    position: absolute;
-    top: 0;
-    right: 0;
     width: 50px;
     margin-left: 5px;
     height: 38px;
